<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.yarni.ui.login.ui.login.LoginFragment"
        android:label="@string/action_sign_in"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
    </fragment>
    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.yarni.ui.register.ui.register.RegisterFragment"
        android:label="@string/action_sign_up"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_nav_register_to_nav_login"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.yarni.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.yarni.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.yarni.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>