<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:context=".ui.login.ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:ignore="MissingConstraints">

        <!-- Top Illustration -->
        <ImageView
            android:id="@+id/topImage"
            android:layout_width="match_parent"
            android:layout_height="247dp"
            android:contentDescription="@string/welcome_image_desc"
            android:paddingBottom="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="52dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/username"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="?attr/colorPrimary"
                android:drawableEnd="@drawable/arrow_right"
                android:drawableTint="?attr/colorOnPrimary"
                android:enabled="true"
                android:paddingHorizontal="112dp"
                android:text="@string/welcome_sign_in"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintVertical_bias="0.2" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <!-- Small text -->
            <TextView
                android:id="@+id/noAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/no_account_text"
                android:textColor="#898989"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Create account button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_account"
                android:layout_width="156dp"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnSecondary"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <!-- Divider line -->
            <View
                android:id="@+id/divider"
                android:layout_width="156dp"
                android:layout_height="1dp"
                android:layout_marginTop="28dp"
                android:background="#898989" />

            <!-- Use social login label -->
            <TextView
                android:id="@+id/socialLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/social_login"
                android:textColor="#898989"
                android:textSize="12sp" />

            <!-- Social Icons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/kakao_login"
                    android:src="@drawable/kakao_talk_icon" />

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/naver_login"
                    android:src="@drawable/naver_icon" />

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/google_login"
                    android:src="@drawable/google_icon" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>